--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">TodayInformation</string>
+    <string name="rl_main_shanghai">上海</string>
+    <string name="rl_main_hangzhou">杭州</string>
+    <string name="rl_main_beijing">北京</string>
+    <string name="rl_main_shenzhen">深圳</string>
 </resources>
